# relaya

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: chain.py  ingest.py  main.py  parser.py
data/: sitemap-help.xml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AutoResizeTextarea.tsx  ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  InlineCitation.tsx  SourceBubble.tsx
frontend/app/utils/: constants.tsx  metadata.ts  sendFeedback.tsx
notebooks/: test_docs.ipynb  test_loader.ipynb
